src/main/java/com/example/real/dto/error/ErrorText.java
package com.example.real.dto.error;

import com.example.real.dto.error.ErrorBody;
import lombok.Data;

@Data
public class ErrorText
{
    private ErrorBody errors;
}
